Appending/linking a scene containing clip strips in the VSE doesn't append the clips #39933

Closed
opened 2014-04-28 14:23:26 +02:00 by Willi · 7 comments

System Information
Win7/64

Blender Version
since 2.64 including latest build

Short description of error
Appending/linking a scene containing movie clips (not movies but clips) within the VSE does not also append the clips.

Bild_313.JPG

Exact steps for others to reproduce the error

  • In a new project, within the movie clip editor, open any clip.
  • In the VSE, add "Clip" (not Movie) -> the existing clip
  • Save
  • In a new project, link or append the scene from the just saved file, open the VSE and select the appended scene in the top header.

Problem: The clips have not been imported, and the strips are shown striped.
As known from all other linked/appended object types, all dependend objects must also be linked/appended. Moreover because it can not be fixed by manually appending the missing clip either beforehand or afterwards as the reference to the original clip is broken.

Thanks!

**System Information** Win7/64 **Blender Version** since 2.64 including latest build **Short description of error** Appending/linking a scene containing movie clips (not movies but clips) within the VSE does not also append the clips. ![Bild_313.JPG](https://archive.blender.org/developer/F86276/Bild_313.JPG) **Exact steps for others to reproduce the error** - In a new project, *within the movie clip editor*, open any clip. - In the VSE, add "Clip" (not Movie) -> the existing clip - Save - In a new project, link or append the scene from the just saved file, open the VSE and select the appended scene in the top header. Problem: The clips have not been imported, and the strips are shown striped. As known from all other linked/appended object types, all dependend objects must also be linked/appended. Moreover because it can not be fixed by manually appending the missing clip either beforehand or afterwards as the reference to the original clip is broken. Thanks!
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @willi-2

Added subscriber: @willi-2
Sergey Sharybin self-assigned this 2014-04-28 15:38:02 +02:00

Will have a look.

Will have a look.

This issue was referenced by blender/blender-addons-contrib@32e02302a7

This issue was referenced by blender/blender-addons-contrib@32e02302a7794866e736ba01fb7768e8c6640929

This issue was referenced by 32e02302a7

This issue was referenced by 32e02302a7794866e736ba01fb7768e8c6640929

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 32e02302a7.

Closed by commit 32e02302a7.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39933
No description provided.