Fix T39933: Link/Append Scenes misses VSE mask, clips